--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WNS</string>
+    <string name="app_name">Weather Notification Services</string>
     <string name="action_sign_in_short">Register</string>
     <string name="email">Email</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
@@ -36,6 +36,7 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="action_signOut">Sign Out</string>
 
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
