--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_signOut">Sign Out</string>
+    <string name="action_account">My Account</string>
 
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
@@ -165,4 +166,9 @@
     <string name="rain">Rain</string>
     <string name="temperature">Temperature</string>
     <string name="action_graphs">Graphs</string>
+    <string name="title_activity_main1">MainActivity1</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_friends">Friends</string>
 </resources>
