--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="facebook_app_id">1847880532132087</string>
     <string name="fb_login_protocol_scheme">fb1847880532132087</string>
+    <string name="googleLogins">Google Sign In</string>
 
 
     <string name="action_search">Search</string>
