--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="action_account">My Account</string>
     <string name="action_friendlist">Friends</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
 
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
